<resources>
    <string name="app_name">Fabri Plus</string>
    <string name="text_inicio">Mira peliculas totalmente premium,\ncientos de películas que te esperan\ndirectamente en el teléfono</string>
    <string name="btn_inicio">Empezar</string>
    <string name="welcome">Bienvenidos \n a Fabri Plus</string>
    <string name="email_dash">correo : fabriziobarrios92@gmail.com</string>
    <string name="search_dash">Buscar Peliculas</string>
    <string name="vermas_dash">Ver Mas</string>
    <string name="todas_dash">Todas</string>
    <string name="premieres_dash">Proximos Estrenos (2024 - 2025)</string>
    <string name="estrenos_dash">Estrenos Recientes</string>
    <string name="comedia_dash">Comedia</string>
    <string name="animacion_dash">Animación</string>
    <string name="accion_dash">Acción</string>
    <string name="aventura_dash">Aventura</string>
    <string name="terror_dash">Terror</string>
    <string name="crimen_dash">Crimen</string>
    <string name="fantasia_dash">Fantasía</string>
    <string name="drama_dash">Drama</string>
    <string name="Romance_dash">Romance</string>
    <string name="familia_dash">Familia</string>
    <string name="recientes_dash">Recientes</string>
    <string name="suspenso_dash">Suspenso</string>
    <string name="cienciaficcion_dash">Ciencia Ficción</string>
    <string name="foreign_dash">Foreign (Extranjeras)</string>
    <string name="documental_dash">Documental</string>
    <string name="animes_dash">Animes</string>
    <string name="guerra_dash">Guerra</string>
    <string name="historia_dash">Historia</string>
    <string name="musical_dash">Musical</string>
    <string name="pelitv_dash">Peliculas de Television</string>
    <string name="misterio_dash">Misterio</string>
    <string name="reciente_dash">Recientes</string>

    <!--bottom-->
    <string name="Inicio_bottom">Inicio</string>
    <string name="favoritos_bottom">Favoritos</string>
    <string name="tele_bottom">TV</string>
    <string name="series_botton">Series</string>
    <string name="perfil_bottom">Info</string>

    <!--slider-->
    <string name="btnSliderVH">Ver Trailer</string>

    <!--api-->
    <string name="year_api">Año</string>
    <string name="name_api">Nombre</string>
    <string name="genre_api">Genero</string>
    <string name="age_api">Edad</string>
    <string name="time_api">Tiempo</string>

    <!--dialog-->
    <string name="dialog_titulo">Aviso importante</string>
    <string name="dialog_subtitulo">Algunos videos consumen muchos datos móviles. Recomendamos activar Wi-Fi.</string>
    <string name="dialog_btndatos">Continuar con datos</string>
    <string name="dialog_btnwifi">Activar Wi-Fi</string>

    <!--fragment favoritos-->
    <string name="fragment_noFavorite">No has agregado contenido a tu lista de favoritos.</string>

    <!--api-->
    <string name="btnreproducir_details">Reproducir</string>

    <!-- redes -->
    <string name="redes">Redes Sociales</string>
    <string name="telegram">Telegram</string>
    <string name="instagram">Instragram</string>
    <string name="facebook">Facebook</string>
    <string name="tiktok">Tik Tok</string>
    <string name="youtube">YouTube</string>
    <string name="bmc">¿Me ayudarías regalándome un café?</string>
    <string name="bmc_text">Haciendo click aqui \uD83D\uDC47</string>
    <string name="bmc_link"><a style="text-decoration: none;" href="https://buymeacoffee.com/fabrizioba7">buy me a coffee</a></string>
    <string name="bmc_qr">o \n Escaneando el QR.</string>

    <!-- desarrollador-->
    <string name="nombre_dev">Fabrizio Barrios Saavedra</string>
    <string name="apodo_dev">RFBS23</string>

</resources>